update map and various work flows